// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AnalysisStats renders correctly with default props 1`] = `
<DocumentFragment>
  <div
    class="card"
  >
    <div
      class="card-header"
    >
      <h3
        class="card-title"
      >
        段落分析
      </h3>
    </div>
    <div
      class="card-body"
    >
      <div
        class="row row"
      >
        <div
          class="col col-sm-6 col-lg-3"
        >
          <div
            class="card"
          >
            <div
              class="card-body p-3 text-center"
            >
              <div
                class="text-yellow text-right"
              >
                0%
                <i
                  class="fe fe-minus"
                />
              </div>
              <div
                class="h1 m-0"
              >
                0
              </div>
              <div
                class=" mb-4"
              >
                総段落数
              </div>
            </div>
          </div>
        </div>
        <div
          class="col col-sm-6 col-lg-3"
        >
          <div
            class="card"
          >
            <div
              class="card-body p-3 text-center"
            >
              <div
                class="text-yellow text-right"
              >
                0%
                <i
                  class="fe fe-minus"
                />
              </div>
              <div
                class="h1 m-0"
              >
                0
              </div>
              <div
                class=" mb-4"
              >
                総文字数
              </div>
            </div>
          </div>
        </div>
        <div
          class="col col-sm-6 col-lg-3"
        >
          <div
            class="card"
          >
            <div
              class="card-body p-3 text-center"
            >
              <div
                class="text-yellow text-right"
              >
                0%
                <i
                  class="fe fe-minus"
                />
              </div>
              <div
                class="h1 m-0"
              >
                0
              </div>
              <div
                class=" mb-4"
              >
                文字数超過
              </div>
            </div>
          </div>
        </div>
        <div
          class="col col-sm-6 col-lg-3"
        >
          <div
            class="card"
          >
            <div
              class="card-body p-3 text-center"
            >
              <div
                class="text-yellow text-right"
              >
                0%
                <i
                  class="fe fe-minus"
                />
              </div>
              <div
                class="h1 m-0"
              >
                0
              </div>
              <div
                class=" mb-4"
              >
                文字数不足
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AnalysisStats renders correctly with given props 1`] = `
<DocumentFragment>
  <div
    class="card"
  >
    <div
      class="card-header"
    >
      <h3
        class="card-title"
      >
        段落分析
      </h3>
    </div>
    <div
      class="card-body"
    >
      <div
        class="row row"
      >
        <div
          class="col col-sm-6 col-lg-3"
        >
          <div
            class="card"
          >
            <div
              class="card-body p-3 text-center"
            >
              <div
                class="text-yellow text-right"
              >
                0%
                <i
                  class="fe fe-minus"
                />
              </div>
              <div
                class="h1 m-0"
              >
                10
              </div>
              <div
                class=" mb-4"
              >
                総段落数
              </div>
            </div>
          </div>
        </div>
        <div
          class="col col-sm-6 col-lg-3"
        >
          <div
            class="card"
          >
            <div
              class="card-body p-3 text-center"
            >
              <div
                class="text-yellow text-right"
              >
                0%
                <i
                  class="fe fe-minus"
                />
              </div>
              <div
                class="h1 m-0"
              >
                2500
              </div>
              <div
                class=" mb-4"
              >
                総文字数
              </div>
            </div>
          </div>
        </div>
        <div
          class="col col-sm-6 col-lg-3"
        >
          <div
            class="card"
          >
            <div
              class="card-body p-3 text-center"
            >
              <div
                class="text-green text-right"
              >
                +1%
                <i
                  class="fe fe-chevron-up"
                />
              </div>
              <div
                class="h1 m-0"
              >
                2
              </div>
              <div
                class=" mb-4"
              >
                文字数超過
              </div>
            </div>
          </div>
        </div>
        <div
          class="col col-sm-6 col-lg-3"
        >
          <div
            class="card"
          >
            <div
              class="card-body p-3 text-center"
            >
              <div
                class="text-red text-right"
              >
                -1%
                <i
                  class="fe fe-chevron-down"
                />
              </div>
              <div
                class="h1 m-0"
              >
                3
              </div>
              <div
                class=" mb-4"
              >
                文字数不足
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
